[DMaaP DR] JKD 11 migration
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Change-Id: Ib9d326f4bdf5c4e208dea5a4a00be0c3be3a3067
Issue-ID: DMAAP-1386